--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@github/markdown-toolbar-element": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autolinker": "^4.0.0",
+    "bootstrap": "^5.3.3",
+    "codemirror": "5.59.3",
+    "js-file-download": "^0.4.12",
     "react": "^18.3.1",
+    "react-autosize-textarea": "^7.1.0",
+    "react-bootstrap": "^2.10.5",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "remarkable": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
